fetcheddataDev/objects/Pharma_Product1__c.object
<CustomObject>
    <fields>
        <fullName>Inventory__c</fullName>
        <label>Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <inlineHelpText>Enter the price</inlineHelpText>
        <label>Price</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Pharma Product1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pharma Product1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Product1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>